--- a/arch/arm64/configs/dipper_defconfig
+++ b/arch/arm64/configs/dipper_defconfig
@@ -1,5 +1,5 @@
 CONFIG_LOCALVERSION="-perf"
-# CONFIG_FHANDLE is not set
+# CONFIG_FHANDLE is not set1
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
